# boxoban-mcp

./: README.md  example.py  pyproject.toml
src/boxoban_mcp/: __init__.py  boxoban.py  game.py  utils.py
tests/: __init__.py  test_boxoban.py  test_boxoban_game.py
